--- a/templates/index.html
+++ b/templates/index.html
@@ -395,6 +395,8 @@
       .main_tab_links {
         width: 100%;
         height: 50px;
+        text-align: left;
+        text-indent: 15px;
       }
 
       .case_info_button, .case_delete_button, .case_visibility_checkbox {
@@ -642,15 +644,16 @@
             <img src="static/CEEMLogo.png" alt="UNSW Logo" style="float:left; width: 100%;">
         </div>
         <button id="default_panel" class="main_tab_links"
-                onclick="displayPanels(event, 'load_panel')" style="width: 100%; height: 50px">Load</button>
+                onclick="displayPanels(event, 'load_panel')" style="width: 100%; height: 50px">&#9675; Load</button>
         <button class="main_tab_links" style="width: 100%; height: 50px"
-                onclick="displayPanels(event, 'wholesale_energy_costs_selection_panel')">Wholesale prices</button>
+                onclick="displayPanels(event, 'end_user_tech')">&#9675; End user tech</button>
+        <button class="main_tab_links" style="width: 100%; height: 50px"
+                onclick="displayPanels(event, 'wholesale_energy_costs_selection_panel')">&#9675; Wholesale prices</button>
         <button id="tariff_panel_button" class="main_tab_links"
-                onclick="displayPanels(event, 'tariff_selection_panel')" style="width: 100%; height: 50px">Tariffs</button>
+                onclick="displayPanels(event, 'tariff_selection_panel')" style="width: 100%; height: 50px">&#9675; Tariffs</button>
         <button id="results_panel_button" class="main_tab_links"
-                onclick="displayPanels(event, 'results_panel')" style="width: 100%; height: 50px">Results</button>
+                onclick="displayPanels(event, 'results_panel')" style="width: 100%; height: 50px">&#9675; Results</button>
     </div>
-
     <div id="right_column" class="main_tab" style="height: 100%; width: 83%; float: left; overflow: hidden;">
         <div style="z-index: 99; position: absolute; top: 30px; right: 100px;">
             Project name: &nbsp
@@ -769,9 +772,84 @@
                     <script src="static/plot_load.js"></script>
                 </div>
             </div>
-
         </div>
-
+        <div id="end_user_tech" class="main_tab_content">
+            <div style="height: 4.13%"></div>
+            <div style="padding: 1%; width: 100%; height: 95%; border-width: 2px; box-sizing: border-box;
+                        border-style: solid; border-color: #EEEEEE;">
+                <div class="row" style="height: 55%">
+                    <div class="col" style="width: 50%">
+                        <div class="row" style="height: 10%">
+                            <h4 style="margin: 0;">Solar</h4>
+                            <hr style="width: 80%; float: left;">
+                        </div>
+                        <div class="row" style="height: 35%">
+                            <div class="col" style="width: 40%">
+                                <div class="label_stacked">Penetration (%):</div>
+                                <div class="label_stacked">Mean system size (kW):</div>
+                                <div class="label_stacked">Standard deviation (kW):</div>
+                                <div class="label_stacked">Solar profiles :</div>
+                            </div>
+                            <div class="col" style="width: 50%">
+                            </div>
+                        </div>
+                        <div class="row" style="height: 10%">
+                            <h4 style="margin: 0;">Batteries</h4>
+                            <hr style="width: 80%; float: left;">
+                        </div>
+                        <div class="row" style="height: 45%">
+                            <div class="col" style="width: 40%">
+                                <div class="label_stacked">Penetration (%):</div>
+                                <div class="label_stacked">Mean power size (kW):</div>
+                                <div class="label_stacked">Standard deviation (kW):</div>
+                                <div class="label_stacked">Mean power/energy ratio:</div>
+                                <div class="label_stacked">Standard deviation:</div>
+                                <div class="label_stacked">Operational strategy:</div>
+                            </div>
+                            <div class="col" style="width: 50%">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" style="width: 50%">
+                        <div class="row" style="height: 10%">
+                            <h4 style="margin: 0;">Demand response</h4>
+                            <hr style="width: 80%; float: left;">
+                        </div>
+                        <div class="row" style="height: 60%;">
+                            <div class="col" style="width: 50%;">
+                                <div class="label_stacked">Penetration (%):</div>
+                                <div class="label_stacked">Mean max response size (kW):</div>
+                                <div class="label_stacked">Standard deviation (kW):</div>
+                                <div class="label_stacked">Max response time:</div>
+                                <div class="label_stacked">Response events limit (/year):</div>
+                                <div class="label_stacked">Energy:</div>
+                            </div>
+                            <div class="col" style="width: 20%;"></div>
+                        </div>
+                        <div class="row" style="height: 10%">
+                            <h4 style="margin: 0;">Actions</h4>
+                            <hr style="width: 80%; float: left;">
+                        </div>
+                        <div class="row" style="height: 30%">
+                            <div class="col" style="width: 40%">
+                            </div>
+                            <div class="col" style="width: 50%">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div style="height: 2%"><hr></div>
+                <div id="net_load_inspection" style="height: 40%">
+                    <div style="height: 10%; overflow: hidden;">
+                        <select  id="select_net_graph" style="float: right; width: 30%;">
+                            <option value="">Some awesome charts!</option>
+                        </select>
+                        <div class="label_line" style="float: right;">Show:&nbsp</div>
+                    </div>
+                    <div class="chart" id="net_load_chart" style="height: 100%;"></div>
+                </div>
+            </div>
+        </div>
         <div id="results_panel" class="main_tab_content">
             <div class="results_area">
                 <div id="results_tab_set" class="tab_button_area">
@@ -1084,7 +1162,7 @@
                             <h4 style="margin: 0;">Historical wholesale prices</h4>
                             <hr style="width: 80%; float: left;">
                         </div>
-                        <div class="row" style="height: 45%">
+                        <div class="row" style="height: 40%">
                             <div class="col" style="width: 30%">
                                 <div class="label_stacked">Year:</div>
                                 <div class="label_stacked">State:</div>
