added input_col class

--- a/templates/index.html
+++ b/templates/index.html
@@ -422,6 +422,11 @@
         visibility: hidden;
       }
 
+      .input_col {
+        max-width: 500px;
+      }
+
+
   </style>
 
     <div id="message_dialog" title="Update" style="display: none">
@@ -675,16 +680,16 @@
             <div style="padding: 1%; width: 100%; height: 95%; border-width: 2px; box-sizing: border-box;
                         border-style: solid; border-color: #EEEEEE;">
                 <div id="load_selection" class="row" style="height: 55%;">
-                    <div class="col" style="width: 35%;">
+                    <div class="col input_col" style="width: 35%;">
                         <div class="row" style="height: 10%">
                             <h4 style="margin: 0;">Select Load</h4>
                             <hr style="width: 80%; float: left;">
                         </div>
                         <div class="row" style="height: 80%">
-                            <div class="col" style="width: 30%;">
+                            <div class="col" style="width: 40%;">
                                 <div class="label_stacked">Selected:</div>
                             </div>
-                            <div class="col" style="width: 50%;">
+                            <div class="col" style="width: 40%;">
                                 <select id="select" name="select">
                                     <option selected="selected">blank</option>
                                 </select>
@@ -698,7 +703,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col" style="width: 65%;">
+                    <div class="col input_col" style="width: 65%;">
                         <div class="row" style="height: 10%">
                             <h4 style="margin: 0;">Demographic Filters</h4>
                             <hr style="width: 100%; float: left;">
@@ -789,7 +794,7 @@
             <div style="padding: 1%; width: 100%; height: 95%; border-width: 2px; box-sizing: border-box;
                         border-style: solid; border-color: #EEEEEE;">
                 <div class="row" style="resize: vertical; overflow: auto; height: 60%;">
-                    <div class="col" style="width: 50%">
+                    <div class="col input_col" style="width: 50%;">
                         <div class="row" style="overflow: hidden;">
                             <h4 style="margin-bottom: 0;">Solar</h4>
                             <hr style="width: 80%; float: left; margin-bottom: 1.5vh;">
@@ -833,7 +838,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col" style="width: 50%">
+                    <div class="col input_col" style="width: 50%;">
                         <div class="row" style="overflow: hidden">
                             <h4 style="margin: 0;">Demand response</h4>
                             <hr style="width: 80%; float: left; margin-bottom: 1.5vh;">
@@ -1191,7 +1196,7 @@
             <div style="padding: 1%; width: 100%; height: 95%; border-width: 2px; box-sizing: border-box;
                         border-style: solid; border-color: #EEEEEE;">
                 <div class="row" style="height: 55%">
-                    <div class="col" style="width: 50%">
+                    <div class="col input_col" style="width: 50%">
                         <div class="row" style="height: 10%">
                             <h4 style="margin: 0;">Historical wholesale prices</h4>
                             <hr style="width: 80%; float: left;">
