--- a/templates/tariff_selectors.html
+++ b/templates/tariff_selectors.html
@@ -1,4 +1,4 @@
-<div class="col" style="width: 50%">
+<div class="col input_col" style="width: 50%">
     <div class="row" style="height: 12%">
         <h4 style="margin: 0;">Filter tariffs</h4>
         <hr style="width: 80%; float: left;">
@@ -40,7 +40,7 @@
         </div>
     </div>
 </div>
-<div class="col" style="width: 50%">
+<div class="col input_col" style="width: 50%">
     <div class="row" style="height: 12%">
         <h4 style="margin: 0;">Tariff Details</h4>
         <hr style="width: 80%; float: left;">
