draft functionality for project menu

--- a/templates/index.html
+++ b/templates/index.html
@@ -509,9 +509,8 @@
                   <li><div onclick="load_project()">Load Project</div></li>
                   <li><div onclick="save_project()">Save Project</div></li>
                   <li><div onclick="save_project_as()">Save Project As</div></li>
-                  <li><div onclick="delete_project()">Delete Project</div></li>
                   <hr>
-                  <li><div onclick="restart_tool()">Restart Tool</div></li>
+                  <li><div id="restart_button" onclick="restart_tool()">Restart Tool</div></li>
               </ul>
           </li>
           <li><div>Load</div>
